- adding gitactions for testing and pushing to dockerhub - adding swagger - updating makefile to include swagger - adding goswagger comments to routes - adding more tests - adding endorse - adding score
adding docker file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
+        "authed",
         "hackerspace",
         "hackrva",
+        "routes",
         "shaj"
     ]
 }
