- improving swagger docs - updating json for some response and requests - adding bounty close endpoint

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
     "cSpell.words": [
         "authed",
+        "dgrijalva",
         "hackerspace",
         "hackrva",
         "routes",
-        "shaj"
+        "shaj",
+        "signin"
     ]
 }
